    - vpIcCompGrabber was removed, since it uses a home made wrapper based 
      on itifg-7.2.1 driver which is not maintained yet
  - Testing
    - Use of CDash insteed of Dart2. Dashboards are sent to 
      http://cdash.irisa.fr/CDash/index.php?project=ViSP
  - Platform compatibility
    - Compatibility with g++ 4.3.0 coming with fedora 9
  - New Features
    - vpFeatureThetaU: Add cRcd feature, with ThetaU corresponding to the 
      rotation the camera has to achieve to move from current frame to the 
      desired one.
    - vpOpenCVGrabber: New framegrabber based on OpenCV third party library
      (useful for USB cameras).
    - vp1394TwoGrabber: Get the timestamp associated to the grabbed image.
    - vpV4l2Grabber: Get the timestamp associated to the grabbed image.
    - vpRobotAfma6 and vpAfma6: Modifications to be compatible with the new 
      low level Adept controller provided by Cerebellum Automation.
    - vpRobotAfma4 and vpAfma4: Modifications to be compatible with the new 
      low level Adept controller provided by Cerebellum Automation. New 
      vpServolens class to control the Servolens lens attached to the camera 
      fixed on the Afma4 end-effector.
  - Examples:
    - New examples in example/manual described in ViSP guide under preparation.
    - example/servo-simu/servoSimu3DCamVelocity2.cpp
  - Documentation
    - Creation of a deprecated section.
    - Classes are now grouped in doxygen modules to help learning ViSP.
    - Introduction of new sample examples in the online documentation
  - Bug fixed
    - [5370] DirectShow and Visual Studio 9 2008 Express
    - [5371] Warnings on Visual Studio 9 2008
    - [5375] Compilation error in calibrate2dGrid.cpp
    - [5398] display cylinder
    - [5438] window sizes with Coin
    - [5496] Compilation error in example/framegrabber/grab1394.cpp
    - [5508] Bug in vpImageConvert::YUV420ToRGB
    - [5527] Bug in vpImageTools::changeLUT()